@@ -1,3 +1,6 @@
+2013-11-26
+	1. New version simbank-0.6
+	2. Minor bug fixes after testing on SBG4.
 2013-11-05
 	1. Fixed simcard_restart() function (flags reinitialization).
 2013-10-10
